@@ -73,3 +73,8 @@
 	of menu items.
 2015-12-28 Fred Gleason <fredg@paravelsystems.com>
 	* Tweaked menu layout in 'src/wh/whcgiapplication.cpp'.
+2015-12-29 Fred Gleason <fredg@paravelsystems.com>
+	* Moved the 'exit()' method from the 'WHCgiPage' class to
+	'WHCgiApplication'.
+	* Created a 'cgiapp' global variable in 'src/wh/whcgiapplication.cpp'
+	and 'src/wh/whcgiapplication.h'.
